--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1>Fitness Quiz</h1>
 			</header>
 
-			<p id="score">Score: 0</p>
+			<p id="score">Correct Answers: 0</p>
 
 			<div id="content">
 				<h3 id="questions">The expression of power can best be described as</h3>
